# taijitu

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  taijitu_report_20260305_174034.md  taijitu_report_20260305_193618.md  taijitu_report_20260306_100609.md
.github/workflows/: ci.yml
monitoring/: prometheus.yml
taijitu/: config.py
taijitu/alerting/: telegram.py
taijitu/api/: server.py
taijitu/api/routes/: events.py  query.py  stats.py
taijitu/autonomy/: hardening.py  night_probe.py  self_learning.py
taijitu/detection/: anomaly_detector.py  correlator.py  rule_engine.py
taijitu/ingestion/: log_sources.py  packet_sensor.py
taijitu/memory/: attacker_profile.py  threat_dna.py
taijitu/minds/: adversary.py  debate.py  guardian.py
taijitu/query/: natural_language.py
taijitu/red/: cli.py  cortex.py  logo.py  payloads.py  pipeline.py  platforms.py  scope_manager.py
taijitu/red/brain/: feature_mapper.py  hacking_brain.py  report_generator.py
taijitu/red/recon/: js_crawler.py  osint.py
taijitu/red/scanner/: auth_scanner.py  takeover.py  vuln_scanner.py  web_scanner.py
taijitu/storage/: __init__.py  cache.py  database.py  models.py
taijitu/tasks/: worker.py
tests/: conftest.py  test_detection.py
