[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taijitu"
version = "2.0.0"
description = "Two Minds. One System. Zero Blind Spots."
requires-python = ">=3.11"

[project.scripts]
taijitu-red = "taijitu.red.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taijitu*"]
